# fractal-uzh-converters

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: build_and_test.yml  docs.yml
docs/: condition_tables.md  index.md
docs/converters/: cq3k.md  index.md  operetta.md  scanr.md
src/fractal_uzh_converters/: __FRACTAL_MANIFEST__.json
src/fractal_uzh_converters/common/: __init__.py  image_in_plate_compute_task.py  utils.py
src/fractal_uzh_converters/cq3k/: __init__.py  convert_cq3k_init_task.py  utils.py
src/fractal_uzh_converters/dev/: task_list.py
src/fractal_uzh_converters/dev/docs_info/: cq3k_task.md  operetta_task.md  scanr_task.md
src/fractal_uzh_converters/olympus_scanr/: __init__.py  convert_scanr_init_task.py  utils.py
src/fractal_uzh_converters/operetta/: __init__.py  convert_operetta_init_task.py  utils.py
tests/: conftest.py  test_cq3k_task.py  test_operetta_task.py  test_scanr_task.py  utils.py
tests/data/CQ3K/CQ3K_reference_acquisitions/2w1p1c1z1t_mip/: MeasurementData.mlf  MeasurementDetail.mrf
tests/data/CQ3K/snapshots/: 2w1p1c1z1t_mip.yaml
tests/data/OlympusScanR/OlympusScanR_reference_acquisitions/1w1p1c1z1t/data/: metadata.ome.xml
tests/data/OlympusScanR/snapshots/: 1w1p1c1z1t.yaml
tests/data/Operetta/Operetta_reference_acquisitions/1w1p1c1z1t/: condition_table.csv
tests/data/Operetta/Operetta_reference_acquisitions/1w1p1c1z1t/Images/: Index.idx.xml
tests/data/Operetta/snapshots/: 1w1p1c1z1t.yaml  1w1p1c1z1t_with_condition_table.yaml
