# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
packages = ["src/fractal_uzh_converters"]


# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "fractal-uzh-converters"
dynamic = ["version"]
description = "A collection of fractal tasks to convert HCS Plates to OME-Zarr"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Lorenzo Cerrone", email = "lorenzo.cerrone@uzh.ch" }]
requires-python = ">=3.11,<3.15"

dependencies = [
    "ome-zarr-converters-tools>=0.7.0,<0.8.0",
    "fractal-task-tools==0.4.0a3",
    "ngio>=0.5.3,<0.6.0",
    "zarrs",
    "tqdm",
    "tifffile",
    "ome_types",
    "lxml",                                    # hidden dep of ome_types
    "xmltodict",
    "imagecodecs",
]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = [
    "plotly",
    "notebook",
    "matplotlib",
    "devtools",
    "hatch",
    "pytest",
    "requests",
    "jsonschema",
    "ruff",
    "pre-commit",
    "pytest-cov",
    "xmltodict",
]
test = ["pytest", "pytest-cov", "devtools", "jsonschema"]
docs = ["mkdocs-material", "mike"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "D415", # First line should end with a period (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 89
skip-magic-trailing-comma = false # default is false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# The filterwarnings option 
# caused some unexpected behavior in the tests
# so it was commented out
#filterwarnings = [
#    "error",
#    #"ignore::FutureWarning",
#    #"ignore::DeprecationWarning",
#]
addopts = [
    "-vv",
    "--color=yes",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
fractal-uzh-converters = { path = ".", editable = true }
# For local development, you can use the following line instead of the one above
# ome-zarr-converters-tools = { path = "../ome-zarr-converters-tools", editable = true }
# ngio = { path = "../ngio", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

# Required Python version and dependencies
[tool.pixi.tasks]
